--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,32 @@ sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
+	flatDir {
+		dirs 'lib'
+	}
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.kafka:spring-kafka'
+	implementation group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '8.8.1'
+	implementation group: 'org.apache.lucene', name: 'lucene-core', version: '8.8.1'
+	implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '8.8.1'
 	implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.5.0'
+    implementation name:'VnCoreNLP-1.1.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	
+}
+
+configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+        exclude group: 'ch.qos.logback', module: 'logback-classic'
+        exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
+    }
 }
 
 test {
